--- a/Precious/kenya_nlp_tag_and_text_models.ipynb
+++ b/Precious/kenya_nlp_tag_and_text_models.ipynb
@@ -1126,11 +1126,11 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Combining all text columns with joined tags"
+   ]
   },
   {
    "cell_type": "code",
@@ -1463,7 +1463,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Modeling Combined Text Columns for Kenya with Joined TAGS"
+    "### Modeling Combined Text Columns for Kenya "
    ]
   },
   {
@@ -2248,6 +2248,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# dropping empty rows\n",
     "kiva_kenya.dropna(inplace=True)"
    ]
   },
@@ -2286,7 +2287,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Reproducing logreg score from above to extract features."
+    "### Reproducing logreg score from above to extract features."
    ]
   },
   {
@@ -2295,6 +2296,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# defining variables for models\n",
     "X = kiva_kenya['joined_text']\n",
     "y = kiva_kenya['STATUS']"
    ]
@@ -2318,6 +2320,7 @@
     }
    ],
    "source": [
+    "# null model values\n",
     "y.value_counts(normalize=True)"
    ]
   },
@@ -2347,6 +2350,7 @@
     }
    ],
    "source": [
+    "# checking number of features\n",
     "X_train_tdvec.shape"
    ]
   },
@@ -2356,16 +2360,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# vectorizing data\n",
     "tdvec = TfidfVectorizer(ngram_range=(1,2), max_features=20_000)\n",
     "X_train_tdvec = tdvec.fit_transform(X_train)\n",
     "X_test_tdvec = tdvec.transform(X_test)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Logistic Regression Model"
    ]
   },
   {
@@ -2385,6 +2383,7 @@
     }
    ],
    "source": [
+    "# instantiating and fitting logestic regression model\n",
     "logreg = LogisticRegression(max_iter=1000)\n",
     "logreg.fit(X_train_tdvec, y_train)"
    ]
@@ -2415,6 +2414,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# creating predictions from test data\n",
     "logreg_preds = logreg.predict(X_test_tdvec)"
    ]
   },
@@ -2437,6 +2437,7 @@
     }
    ],
    "source": [
+    "# showing predictions vs true status where 0=expired and 1=funded\n",
     "logreg_cm = confusion_matrix(y_test, logreg_preds)\n",
     "ConfusionMatrixDisplay(logreg_cm).plot();"
    ]
@@ -2678,6 +2679,7 @@
     }
    ],
    "source": [
+    "# top 20 features and their coefficients\n",
     "word_coef_df.nlargest(20, 'coefs')"
    ]
   },
@@ -2846,6 +2848,7 @@
     }
    ],
    "source": [
+    "# lowest 20 features and their coefficients\n",
     "word_coef_df.nsmallest(20, 'coefs')"
    ]
   },
