updating file name change added correct model with stemmed words

--- a/Precious/ps_kenya_nlp_tag_and_text_models.ipynb
+++ b/Precious/ps_kenya_nlp_tag_and_text_models.ipynb
@@ -1129,7 +1129,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Combining all text columns with joined tags"
+    "## Combining all text columns \n",
+    "(Was supposed to be with joined tags, but they're not...)"
    ]
   },
   {
