updating preprocessing, adding interpretation, saving progress on model selection insights

--- a/rachel/rzi_preprocessing.ipynb
+++ b/rachel/rzi_preprocessing.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 37,
    "metadata": {
     "id": "PJj-pyWbNoIG"
    },
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 39,
    "metadata": {
     "id": "-E_uyEKWPhzH"
    },
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -176,7 +176,7 @@
        "4                                                NaN       1  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,25 +187,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(50689, 5)"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "text_columns = ['DESCRIPTION_TRANSLATED', 'LOAN_USE', 'TAGS']\n"
+    "kiva.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "id": "37WHQUz6daUU"
-   },
+   "execution_count": 42,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# #ensure that all text fields are strings\n",
-    "\n",
-    "# for column in text_columns:\n",
-    "#   kiva[column] = kiva[column].astype(str)\n"
+    "text_columns = ['DESCRIPTION_TRANSLATED', 'LOAN_USE', 'TAGS']\n"
    ]
   },
   {
@@ -214,19 +220,21 @@
     "id": "JohY3KCFiVZG"
    },
    "source": [
-    "### Remove Special Characters"
+    "### Remove Special Characters, Numbers, and Other Elements Identified During Exploratory Modeling"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 43,
    "metadata": {
     "id": "BaYkB4f5iZSI"
    },
    "outputs": [],
    "source": [
     "for column in text_columns:\n",
-    "    kiva[column] = kiva[column].replace('[^\\w ]','',regex=True).astype(str) "
+    "    kiva[column] = kiva[column].replace('[^\\w ]','',regex=True).astype(str) \n",
+    "    kiva[column] = kiva[column].replace('\\d+','',regex=True).astype(str) \n",
+    "    kiva[column] = kiva[column].replace('trainingbr', 'training',regex=True).astype(str) "
    ]
   },
   {
@@ -240,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 44,
    "metadata": {
     "id": "wZAzNu6Aiyuk"
    },
@@ -251,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 45,
    "metadata": {
     "id": "MZDsv3OSi-OU"
    },
@@ -272,13 +280,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 46,
    "metadata": {
     "id": "xY6rqnzejtaB"
    },
    "outputs": [],
    "source": [
-    "stop_words = text.ENGLISH_STOP_WORDS\n",
+    "my_stop = ['br', 'nan','rnrnhe']\n",
+    "stop_words = text.ENGLISH_STOP_WORDS.union(my_stop)\n",
     "# Remove stopwords function\n",
     "\n",
     "def remove_stopwords(text):\n",
@@ -287,137 +296,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 47,
    "metadata": {
     "id": "MLBAKIdSkDKP"
    },
    "outputs": [],
    "source": [
     "for column in ['DESCRIPTION_TRANSLATED', 'LOAN_USE']:\n",
-    "    kiva[column] = kiva[column].apply(lambda x: remove_stopwords(x))"
+    "    kiva[column] = kiva[column].apply(remove_stopwords)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Lemmatize"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def lemmatize_text(text):\n",
+    "    lemmatizer = WordNetLemmatizer()\n",
+    "    return [lemmatizer.lemmatize(w) for w in text]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for column in text_columns:\n",
+    "    kiva[column] = kiva[column].apply(lemmatize_text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#remove any rows with empty text in the description that have popped up post-pre-processing \n",
+    "\n",
+    "kiva = kiva[kiva['DESCRIPTION_TRANSLATED'].str.len() >= 1].reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['dinnah',\n",
-       " '43',\n",
-       " 'years',\n",
-       " 'age',\n",
-       " 'proud',\n",
-       " 'mother',\n",
-       " '5',\n",
-       " '4',\n",
-       " 'schoolgoing',\n",
-       " 'active',\n",
-       " 'woman',\n",
-       " 'works',\n",
-       " 'agriculture',\n",
-       " 'skill',\n",
-       " 'inherited',\n",
-       " 'parents',\n",
-       " 'br',\n",
-       " 'br',\n",
-       " 'addition',\n",
-       " 'engaging',\n",
-       " 'small',\n",
-       " 'business',\n",
-       " 'activities',\n",
-       " 'dinnah',\n",
-       " 'hardworking',\n",
-       " 'mixed',\n",
-       " 'farmer',\n",
-       " 'past',\n",
-       " 'years',\n",
-       " 'growing',\n",
-       " 'vegetables',\n",
-       " 'maize',\n",
-       " 'keeping',\n",
-       " 'dairy',\n",
-       " 'cows',\n",
-       " 'activities',\n",
-       " 'able',\n",
-       " 'earn',\n",
-       " 'decent',\n",
-       " 'honest',\n",
-       " 'income',\n",
-       " 'br',\n",
-       " 'br',\n",
-       " 'dinnah',\n",
-       " 'making',\n",
-       " 'profits',\n",
-       " 'farming',\n",
-       " 'easy',\n",
-       " 'humble',\n",
-       " 'industrious',\n",
-       " 'mother',\n",
-       " 'farm',\n",
-       " 'producing',\n",
-       " 'harvest',\n",
-       " 'lately',\n",
-       " 'lack',\n",
-       " 'fertilizer',\n",
-       " 'good',\n",
-       " 'seeds',\n",
-       " 'presence',\n",
-       " 'pests',\n",
-       " 'diseases',\n",
-       " 'br',\n",
-       " 'br',\n",
-       " 'seeking',\n",
-       " 'loan',\n",
-       " 'buy',\n",
-       " 'farm',\n",
-       " 'inputs',\n",
-       " 'fertilizers',\n",
-       " 'seeds',\n",
-       " 'expand',\n",
-       " 'crop',\n",
-       " 'farm',\n",
-       " 'br',\n",
-       " 'br',\n",
-       " 'loan',\n",
-       " 'dinnah',\n",
-       " 'assured',\n",
-       " 'bumper',\n",
-       " 'harvest',\n",
-       " 'mean',\n",
-       " 'profits',\n",
-       " 'income',\n",
-       " 'using',\n",
-       " 'loan',\n",
-       " 'able',\n",
-       " 'expand',\n",
-       " 'enterprise',\n",
-       " 'br',\n",
-       " 'br',\n",
-       " 'dinnah',\n",
-       " 'hopes',\n",
-       " 'consider',\n",
-       " 'appeal',\n",
-       " 'loan',\n",
-       " 'mean',\n",
-       " 'lot',\n",
-       " 'family']"
+       "(50011, 5)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "kiva['DESCRIPTION_TRANSLATED'][0]"
+    "kiva.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -452,24 +402,24 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1799331</td>\n",
-       "      <td>[dinnah, 43, years, age, proud, mother, 5, 4, ...</td>\n",
-       "      <td>[buy, farm, inputs, seeds, fertilizer, expand,...</td>\n",
+       "      <td>[dinnah, year, age, proud, mother, schoolgoing...</td>\n",
+       "      <td>[buy, farm, input, seed, fertilizer, expand, c...</td>\n",
        "      <td>[parent]</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1294719</td>\n",
-       "      <td>[resy, married, woman, blessed, kids, attend, ...</td>\n",
-       "      <td>[purchase, chicks, poultry, feed]</td>\n",
-       "      <td>[animals, womanowned, business, volunteer_pick...</td>\n",
+       "      <td>[resy, married, woman, blessed, kid, attend, s...</td>\n",
+       "      <td>[purchase, chick, poultry, feed]</td>\n",
+       "      <td>[animal, womanowned, business, volunteer_pick,...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>1595847</td>\n",
-       "      <td>[lavenda, happily, married, blessed, children,...</td>\n",
-       "      <td>[add, stock, beauty, products, salon]</td>\n",
+       "      <td>[lavenda, happily, married, blessed, child, hu...</td>\n",
+       "      <td>[add, stock, beauty, product, salon]</td>\n",
        "      <td>[user_favorite, parent, womanowned, business]</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -477,15 +427,15 @@
        "      <th>3</th>\n",
        "      <td>1139606</td>\n",
        "      <td>[hadija, kiva, borrower, describes, honest, op...</td>\n",
-       "      <td>[buy, stock, vegetables, flour, sugar, soap, i...</td>\n",
+       "      <td>[buy, stock, vegetable, flour, sugar, soap, item]</td>\n",
        "      <td>[repeat, borrower, womanowned, business]</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>1813411</td>\n",
-       "      <td>[purity, aged, 28, lovely, mother, children, c...</td>\n",
-       "      <td>[purchase, highquality, seeds, nutrientrich, f...</td>\n",
+       "      <td>[purity, aged, lovely, mother, child, characte...</td>\n",
+       "      <td>[purchase, highquality, seed, nutrientrich, fe...</td>\n",
        "      <td>[nan]</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -495,28 +445,28 @@
       ],
       "text/plain": [
        "   LOAN_ID                             DESCRIPTION_TRANSLATED  \\\n",
-       "0  1799331  [dinnah, 43, years, age, proud, mother, 5, 4, ...   \n",
-       "1  1294719  [resy, married, woman, blessed, kids, attend, ...   \n",
-       "2  1595847  [lavenda, happily, married, blessed, children,...   \n",
+       "0  1799331  [dinnah, year, age, proud, mother, schoolgoing...   \n",
+       "1  1294719  [resy, married, woman, blessed, kid, attend, s...   \n",
+       "2  1595847  [lavenda, happily, married, blessed, child, hu...   \n",
        "3  1139606  [hadija, kiva, borrower, describes, honest, op...   \n",
-       "4  1813411  [purity, aged, 28, lovely, mother, children, c...   \n",
+       "4  1813411  [purity, aged, lovely, mother, child, characte...   \n",
        "\n",
        "                                            LOAN_USE  \\\n",
-       "0  [buy, farm, inputs, seeds, fertilizer, expand,...   \n",
-       "1                  [purchase, chicks, poultry, feed]   \n",
-       "2              [add, stock, beauty, products, salon]   \n",
-       "3  [buy, stock, vegetables, flour, sugar, soap, i...   \n",
-       "4  [purchase, highquality, seeds, nutrientrich, f...   \n",
+       "0  [buy, farm, input, seed, fertilizer, expand, c...   \n",
+       "1                   [purchase, chick, poultry, feed]   \n",
+       "2               [add, stock, beauty, product, salon]   \n",
+       "3  [buy, stock, vegetable, flour, sugar, soap, item]   \n",
+       "4  [purchase, highquality, seed, nutrientrich, fe...   \n",
        "\n",
        "                                                TAGS  STATUS  \n",
        "0                                           [parent]       1  \n",
-       "1  [animals, womanowned, business, volunteer_pick...       1  \n",
+       "1  [animal, womanowned, business, volunteer_pick,...       1  \n",
        "2      [user_favorite, parent, womanowned, business]       0  \n",
        "3           [repeat, borrower, womanowned, business]       1  \n",
        "4                                              [nan]       1  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -534,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 53,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -559,13 +509,6 @@
     "#save data \n",
     "kiva.to_csv(op_filename)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
