--- a/Shashank/sr2_kiva_smallfile.ipynb
+++ b/Shashank/sr2_kiva_smallfile.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,8 +11,7 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
-    "import sklearn\n",
-    "from sklearn.preprocessing import PolynomialFeatures"
+    "import sklearn"
    ]
   },
   {
