updated insights notebook

--- a/rachel/rzi_04_model_selection_insights.ipynb
+++ b/rachel/rzi_04_model_selection_insights.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
        "1813411                                            ['nan']       1  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,14 +382,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# FINAL MODEL\n",
-    "\n",
-    "-\n",
-    "Do final model \n",
-    "plot confusion matrix\n",
-    "classification report\n",
-    "explore coefficients\n",
-    "top occuring phrases with ngram range"
+    "# FINAL MODEL"
    ]
   },
   {
@@ -703,7 +696,7 @@
     }
    ],
    "source": [
-    "#check out the strongest positively correlated words \n",
+    "#check out the strongest positively correlated words/phrases \n",
     "coef_df.head(10)"
    ]
   },
@@ -908,6 +901,7 @@
     "results = pd.DataFrame(y_test)\n",
     "\n",
     "#add in predictions\n",
+    "# precious - make sure you replace with YOUR MODEL NAME\n",
     "results['preds'] = (logreg.predict(X_test_tvec))\n",
     "results.head()"
    ]
@@ -929,8 +923,7 @@
     }
    ],
    "source": [
-    "# Find all indices where predicted and true results \n",
-    "# aren't the same, then save in an array.\n",
+    "# Find all indices where predicted and true results aren't the same, then save in an array.\n",
     "\n",
     "row_ids = results[results['STATUS'] != results['preds']].index\n",
     "print(row_ids[0:15])"
@@ -942,7 +935,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Create a dataframe of the misclassified descriptions  \n",
+    "#Create a dataframe of the misclassified loans\n",
     "misclassified = df.loc[row_ids]"
    ]
   },
@@ -1126,7 +1119,7 @@
     "predict_proba_dict = {'probability (success)' : logreg.predict_proba(X_test_tvec)[:,1],\n",
     "                     'prediction' : logreg.predict(X_test_tvec),\n",
     "                     'actual' : y_test,\n",
-    "                     'post_text' : X_test}"
+    "                     'description_text' : X_test}"
    ]
   },
   {
