--- a/carlos/eda_modeling.ipynb
+++ b/carlos/eda_modeling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,7 @@
        " 'DISTRIBUTION_MODEL']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
        " 'month']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -444,7 +444,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2 rows × 120 columns</p>\n",
+       "<p>2 rows × 291 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -476,16 +476,16 @@
        "0                      0                                 1  \n",
        "1                      0                                 1  \n",
        "\n",
-       "[2 rows x 120 columns]"
+       "[2 rows x 291 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Dummies for some of the catigorical\n",
+    "# Dummies for some of the catigorical and some numeric \n",
     "\n",
     "df_dummies = pd.get_dummies(df, columns=['month','ORIGINAL_LANGUAGE','ACTIVITY_NAME','COUNTRY_CODE','REPAYMENT_INTERVAL','SECTOR_NAME','DISTRIBUTION_MODEL'],drop_first=True)\n",
     "df_dummies.head(2)"
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +533,7 @@
        "(200000, 291)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +557,7 @@
        "(200000, 14)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -871,11 +871,13 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "`Feature Engineering`\n",
+    "---\n",
+    "`reducing number of dummies and creating new column called miscellaneous`"
+   ]
   },
   {
    "cell_type": "code",
@@ -1009,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1020,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1031,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1077,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1202,7 +1204,7 @@
        "[2 rows x 23 columns]"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1213,7 +1215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1342,13 +1344,382 @@
        "[2 rows x 23 columns]"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.loc[df['COUNTRY_CODE']=='misc_country_code',:].head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ORIGINAL_LANGUAGE</th>\n",
+       "      <th>DESCRIPTION_TRANSLATED</th>\n",
+       "      <th>LOAN_AMOUNT</th>\n",
+       "      <th>STATUS</th>\n",
+       "      <th>IMAGE_ID</th>\n",
+       "      <th>VIDEO_ID</th>\n",
+       "      <th>ACTIVITY_NAME</th>\n",
+       "      <th>SECTOR_NAME</th>\n",
+       "      <th>LOAN_USE</th>\n",
+       "      <th>COUNTRY_CODE</th>\n",
+       "      <th>...</th>\n",
+       "      <th>DISTRIBUTION_MODEL</th>\n",
+       "      <th>word_count_DT</th>\n",
+       "      <th>word_count_LU</th>\n",
+       "      <th>word_count_tags</th>\n",
+       "      <th>char_count_DT</th>\n",
+       "      <th>char_count_LU</th>\n",
+       "      <th>char_count_tags</th>\n",
+       "      <th>FEM_COUNT</th>\n",
+       "      <th>MALE_COUNT</th>\n",
+       "      <th>month</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Spanish</td>\n",
+       "      <td>The city of Portoviejo is located in the valle...</td>\n",
+       "      <td>1075.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>misc_activity_name</td>\n",
+       "      <td>Health</td>\n",
+       "      <td>to purchase natural products.</td>\n",
+       "      <td>EC</td>\n",
+       "      <td>...</td>\n",
+       "      <td>field_partner</td>\n",
+       "      <td>192</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>924</td>\n",
+       "      <td>26</td>\n",
+       "      <td>36</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>English</td>\n",
+       "      <td>Lorna is a married woman, 39 years old with fi...</td>\n",
+       "      <td>400.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>misc_activity_name</td>\n",
+       "      <td>Retail</td>\n",
+       "      <td>to purchase additional stocks of Avon, Natasha...</td>\n",
+       "      <td>PH</td>\n",
+       "      <td>...</td>\n",
+       "      <td>field_partner</td>\n",
+       "      <td>75</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3</td>\n",
+       "      <td>371</td>\n",
+       "      <td>69</td>\n",
+       "      <td>28</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2 rows × 23 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  ORIGINAL_LANGUAGE                             DESCRIPTION_TRANSLATED  \\\n",
+       "0           Spanish  The city of Portoviejo is located in the valle...   \n",
+       "1           English  Lorna is a married woman, 39 years old with fi...   \n",
+       "\n",
+       "   LOAN_AMOUNT  STATUS  IMAGE_ID  VIDEO_ID       ACTIVITY_NAME SECTOR_NAME  \\\n",
+       "0       1075.0       1         1         0  misc_activity_name      Health   \n",
+       "1        400.0       0         1         0  misc_activity_name      Retail   \n",
+       "\n",
+       "                                            LOAN_USE COUNTRY_CODE  ...  \\\n",
+       "0                      to purchase natural products.           EC  ...   \n",
+       "1  to purchase additional stocks of Avon, Natasha...           PH  ...   \n",
+       "\n",
+       "   DISTRIBUTION_MODEL word_count_DT word_count_LU word_count_tags  \\\n",
+       "0       field_partner           192             4               5   \n",
+       "1       field_partner            75            12               3   \n",
+       "\n",
+       "   char_count_DT  char_count_LU  char_count_tags  FEM_COUNT  MALE_COUNT  month  \n",
+       "0            924             26               36          1           1      1  \n",
+       "1            371             69               28          1           1      3  \n",
+       "\n",
+       "[2 rows x 23 columns]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(344588, 23)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['ORIGINAL_LANGUAGE', 'DESCRIPTION_TRANSLATED', 'LOAN_AMOUNT', 'STATUS',\n",
+       "       'IMAGE_ID', 'VIDEO_ID', 'ACTIVITY_NAME', 'SECTOR_NAME', 'LOAN_USE',\n",
+       "       'COUNTRY_CODE', 'LENDER_TERM', 'TAGS', 'REPAYMENT_INTERVAL',\n",
+       "       'DISTRIBUTION_MODEL', 'word_count_DT', 'word_count_LU',\n",
+       "       'word_count_tags', 'char_count_DT', 'char_count_LU', 'char_count_tags',\n",
+       "       'FEM_COUNT', 'MALE_COUNT', 'month'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(344588, 120)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_df_dummies = pd.get_dummies(df, columns=['month','ORIGINAL_LANGUAGE','ACTIVITY_NAME','COUNTRY_CODE','REPAYMENT_INTERVAL','SECTOR_NAME','DISTRIBUTION_MODEL'], drop_first=True)\n",
+    "all_df_dummies.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(200000, 120)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_df_dummies_small = all_df_dummies.sample(200_000)\n",
+    "all_df_dummies_small.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/crivera/opt/anaconda3/lib/python3.8/site-packages/sklearn/linear_model/_logistic.py:762: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>train_score</th>\n",
+       "      <th>test_score</th>\n",
+       "      <th>train_RMSE</th>\n",
+       "      <th>test_RMSE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>LogisticRegression()</th>\n",
+       "      <td>0.812433</td>\n",
+       "      <td>0.81054</td>\n",
+       "      <td>0.187567</td>\n",
+       "      <td>0.18946</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>KNeighborsClassifier()</th>\n",
+       "      <td>0.850387</td>\n",
+       "      <td>0.78410</td>\n",
+       "      <td>0.149613</td>\n",
+       "      <td>0.21590</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>RandomForestClassifier()</th>\n",
+       "      <td>0.999987</td>\n",
+       "      <td>0.86114</td>\n",
+       "      <td>0.000013</td>\n",
+       "      <td>0.13886</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AdaBoostClassifier()</th>\n",
+       "      <td>0.844540</td>\n",
+       "      <td>0.84170</td>\n",
+       "      <td>0.155460</td>\n",
+       "      <td>0.15830</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                          train_score  test_score  train_RMSE  test_RMSE\n",
+       "LogisticRegression()         0.812433     0.81054    0.187567    0.18946\n",
+       "KNeighborsClassifier()       0.850387     0.78410    0.149613    0.21590\n",
+       "RandomForestClassifier()     0.999987     0.86114    0.000013    0.13886\n",
+       "AdaBoostClassifier()         0.844540     0.84170    0.155460    0.15830"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "                                                                                                \n",
+    "X = df_dummies_small.drop(columns = ['STATUS','DESCRIPTION_TRANSLATED','TAGS','LOAN_USE'])\n",
+    "y = df_dummies_small['STATUS']\n",
+    "X_train,X_test,y_train,y_test = train_test_split(X,y,random_state = 42, stratify=y)                      ## Setting up X,y, train/test split\n",
+    "\n",
+    "\n",
+    "                                                                                                    \n",
+    "lr = LogisticRegression()\n",
+    "knn = KNeighborsClassifier()\n",
+    "dt = DecisionTreeClassifier()                 ## Instantiating \n",
+    "bdt = BaggingClassifier()\n",
+    "rf = RandomForestClassifier()\n",
+    "adb = AdaBoostClassifier()\n",
+    "svr = SVC()\n",
+    "\n",
+    "\n",
+    "reg = [\n",
+    "        LogisticRegression(),\n",
+    "       KNeighborsClassifier(),\n",
+    "#        DecisionTreeClassifier(),\n",
+    "#        BaggingClassifier(),             # List of desired models\n",
+    "       RandomForestClassifier(),\n",
+    "       AdaBoostClassifier()\n",
+    "#        SVC()\n",
+    "]\n",
+    "\n",
+    "\n",
+    "\n",
+    "def models(X_train,X_test,y_train,y_test,reg_list):   \n",
+    "    \n",
+    "    train_score=[]\n",
+    "    test_score=[]                                               # Function to run all models and evaluate results\n",
+    "    train_RMSE=[]\n",
+    "    test_RMSE=[]\n",
+    "    \n",
+    "    for reg in reg_list:\n",
+    "        \n",
+    "        reg.fit(X_train,y_train)\n",
+    "        train_score.append(reg.score(X_train,y_train))\n",
+    "        test_score.append(reg.score(X_test,y_test))\n",
+    "        train_pred = reg.predict(X_train)\n",
+    "        train_RMSE.append(mean_squared_error(y_train,train_pred))\n",
+    "        test_pred = reg.predict(X_test)\n",
+    "        test_RMSE.append(mean_squared_error(y_test,test_pred))\n",
+    "        \n",
+    "    return pd.DataFrame(data=[train_score, test_score, train_RMSE, test_RMSE],\n",
+    "                 index=['train_score', 'test_score','train_RMSE','test_RMSE'],\n",
+    "                 columns=[str(c) for c in reg_list]).T\n",
+    "\n",
+    "models(X_train,X_test, y_train,y_test, reg)"
    ]
   },
   {
